完成选择地点的回调事件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,13 +55,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.LoginActivity"></activity>
-        <activity android:name=".Activity.MainActivity"></activity>
-        <activity
-            android:name=".Activity.RecordActivity" />
+        <activity android:name=".Activity.LoginActivity"/>
+        <activity android:name=".Activity.MainActivity"/>
+        <activity android:name=".Activity.RecordActivity" />
         <activity android:name=".Activity.DeviceListActivity" />
-        <activity android:name=".Activity.DeviceSituationActivity"></activity>
-
+        <activity android:name=".Activity.DeviceSituationActivity" />
+        <activity android:name=".Activity.MapActivity" />
     </application>
 
 </manifest>
