处理页面的初步完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
         <activity android:name=".Activity.DeviceListActivity" />
         <activity android:name=".Activity.DeviceSituationActivity" />
         <activity android:name=".Activity.MapActivity" />
+        <activity android:name=".Activity.SolveActivity" />
     </application>
 
 </manifest>
