--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--用于打开gps和关闭gps-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!-- 用于打开gps和关闭gps -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -70,7 +70,8 @@
         <activity android:name=".PersonalSetting.PersonalAccount" />
         <activity android:name=".PersonalSetting.OperateRecord" />
         <activity android:name=".PersonalSetting.AboutVersion" />
-        <activity android:name=".PersonalSetting.AboutUs"></activity>
+        <activity android:name=".PersonalSetting.AboutUs" />
+        <activity android:name=".PersonalSetting.ChangePassword" />
     </application>
 
 </manifest>
