--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/AMap3DMap_6.5.0_AMapNavi_6.5.0_AMapSearch_6.5.0_AMapLocation_4.4.0_20181122.jar')
-
+    implementation 'com.contrarywind:Android-PickerView:4.1.7'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.ForgetAll:LoadingDialog:v1.0.1'
+    implementation "com.squareup.okhttp3:okhttp:3.10.0"
+}
+allprojects {
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 }
