--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,9 +39,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/launcher2"
+        android:icon="@mipmap/bn5"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
