--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.ForgetAll:LoadingDialog:v1.0.1'
     implementation "com.squareup.okhttp3:okhttp:3.10.0"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 allprojects {
     repositories {
